--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     flex-grow:1;
 
 }
-#link1, #link2 {
+#link1, #link2, #link3 {
      padding: 6px;
      font-size: 14px;
     font-family: arial,sans-serif;
@@ -21,7 +21,9 @@
     text-decoration: none;
 
 }
-#link1:hover,#link2:hover
+
+
+#link1:hover,#link2:hover,#link3:hover
 {
     text-decoration: underline;
 }
@@ -85,7 +87,7 @@
     color: rgb(0,0,0, 0.87);
     font-size: 16px;
     padding: 13px;
-
+    padding-left: 45px;
     border-radius: 25px;
     width: 220%;
     height: 47px;
@@ -153,4 +155,86 @@
     left:215px;
     top:-10px;
     white-space:nowrap
+}
+.adv {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-weight: inherit;
+    font-style: inherit;
+    font-size: 100%;
+    vertical-align: baseline;
+    text-decoration: none;
+    font-family: arial,sans-serif;
+}
+.img2 {
+        display: inline-block;
+    vertical-align: middle;
+    margin-top: 2px;
+
+}
+.appbar {
+    color: #d93025;
+    font-size: 20px;
+    margin: 35px 35px;
+}
+#link1, #link2, #link3 {
+     padding: 6px;
+     font-size: 14px;
+    font-family: arial,sans-serif;
+    color: #222;
+    text-decoration: none;
+}
+#link1:hover,#link2:hover,#link3:hover
+{
+    text-decoration: underline;
+}
+
+
+#name {
+
+    min-width: 167px;
+    width: 16%;
+    font-size: 16px;
+    min-height: 42px;
+    font-weight: 500;
+    color: #333;
+    padding: 45px;
+
+
+}
+#name2 {
+
+    margin-left: 565px;
+    width: 33%;
+    font-size: 13px;
+    font-weight: 700;
+    color: #777;
+}
+.field {
+    padding-top: 25px;
+    padding-left: 45px;
+    color: #222;
+    font-size: 13px;
+    line-height: 16px;
+}
+
+.description1 {
+    font-size: 11px;
+    font-weight: 700;
+    color: #777;
+    margin-left: 10px ;
+}
+.textbar {
+    width: 550px;
+    border-radius: 1px;
+    border: 1px solid #d9d9d9;
+    border-top: 1px solid #c0c0c0;
+    font-size: 13px;
+    height: 25px;
+   margin-left: 95px;
+}
+#btn3 {
+    margin-top: 25px;
+    margin-left: 37%;
 }
